--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,6 +157,34 @@ form > button {
   font-weight: 600;
 }
 
+.nav-pagination {
+  display: flex;
+  justify-content: center;
+  max-width: 90vw;
+  margin-bottom: 1em;
+}
+
+.pagination {
+  display: flex;
+}
+
+.pagination a {
+  display: block;
+  padding: 0.25em 0.75em;
+  /* border: 1px solid #999;
+  border-radius: 0.2em; */
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.active-page > a {
+  font-weight: 600;
+  border: 1px solid #999;
+  border-radius: 0.2em;
+  text-decoration: none;
+  background-color: white;
+}
+
 @media (min-width: 29em) {
   :root {
     --search-box-width: 60%;
